[project]
name = "ssa-scrna"
version = "0.1.1"
description = "Semi-supervised annotation of scRNA-seq data"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Adityarup Laha", email = "me@adityaruplaha.me" },
    { name = "Dr. Snehalika Lall" },
    { name = "Prof. Raghunath Chatterjee", email = "rchatterjee@isical.ac.in" },
    { name = "Dr. Jayant Jha", email = "jayant@isical.ac.in" },
]
maintainers = [{ name = "Adityarup Laha", email = "me@adityaruplaha.me" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.17",
    "pandas",
    "scanpy[leiden]>=1.9.0",
    "scikit-learn>=1.2.0",
]

[project.scripts]
ssa-examples = "ssa_examples:main"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.1.0"]
examples = ["scikit-misc>=0.5.2"]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501"]
